# driver-vision-risk-warning-system

./: .gitattributes  .gitignore  README.md  pyproject.toml
.github/workflows/: verify-layout.yml
checkpoints/: .gitignore  README.md  index.yaml
configs/: README.md  paths.yaml  system.yaml
configs/data/: datasets.yaml  task4_samples.yaml
configs/experiments/: drivable_area_v1.yaml
configs/models/: segformer_cityscapes.yaml  segformer_cityscapes_anomaly.yaml  segformer_cityscapes_cpu.yaml
data/: README.md
data/indexes/: README.md  (+4 more)
data_processed/: README.md
data_raw/: README.md
docs/: dataset-survey.md  environment-baseline.md  experiment-plan-v1.md  model-obstacle-type-capability.md  repository-layout.md  sample-visualization.md  segmentation-demo.md  weekly-report-2026-07-14--2026-07-20.md  车载视觉道路障碍物与未知风险预警系统_项目周报_2026-07-14至2026-07-20.docx  车载视觉道路障碍物与未知风险预警系统_验收结论与分工方案.docx
driver_vision_risk/: __init__.py  __main__.py  cli.py
metadata/: README.md  dataset_registry.yaml
outputs/: README.md
scripts/: README.md  download_segmentation_model.py  download_task4_samples.py  run_segmentation_batch_test.py  run_segmentation_demo.py  validate_dataset_registry.py  validate_environment_baseline.py  validate_experiment_plan.py  validate_segmentation_demo.py  validate_task4_visualizations.py  verify_layout.py  visualize_dataset_samples.py
team submissions second week/: 1
team_submissions/: bisenet_infer.py  xjx and hyh
team_submissions first week/: README.md  lzzzy
tests/: test_cli.py  test_repository_layout.py  test_segmentation_postprocess.py
(+47 files in other folders)
