[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "driver-vision-risk-warning-system"
version = "0.1.0"
description = "Repository scaffold for an onboard vision road-risk warning system"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "PyYAML>=6,<7",
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<9",
]

[project.scripts]
driver-vision-risk = "driver_vision_risk.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
